modificacion para agregar test

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -21,6 +21,9 @@
     "zod": "^3.25.9"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "mockingoose": "^2.16.2",
+    "supertest": "^7.0.0",
     "nodemon": "^3.1.10"
   }
 }
