--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,9 +21,12 @@
     "zod": "^3.25.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "babel-jest": "^30.0.2",
     "jest": "^29.7.0",
     "mockingoose": "^2.16.2",
-    "supertest": "^7.0.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "^7.0.0"
   }
 }
